avoid dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   height: 100%;
   min-width: 320px;
   margin: 0;
-  /* text-align: center; */
   display: flex;
   flex-direction: column;
   background: inherit;
@@ -147,7 +146,7 @@
   padding-left: 3rem;
   padding-right: 3rem;
   width: 100%;
-  box-shadow: 5px 5px 10px 2.5px rgb(173, 173, 173);
+  box-shadow: 4px 4px 10px 2px rgb(120, 120, 120);
   background-color: #fdfdfd;
 }
 .page-title{
